
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 FEB 27b
   * in src/post.c
     - commented changes to read_post() done on 19feb27a because such could give a core dump when
       no xcut were performed in the Post() module
   * in src/common.c
     - deleted invert_matrix_new()
     - added invert_matrix_partial_pivoting() by Jaehyuk Lee
     - renamed invert_matrix() to invert_matrix_gaussian_elimination()
     - created invert_matrix() which can call either invert_matrix_partial_pivoting() or 
       invert_matrix_gaussian_elimination()


2019 FEB 27a
   * in src/main.c
     - changed the type of SIGUSR1_CAUGHT from bool to int: a bool type couldn't be passed to MPI_Reduce
       correctly
     - in main(), added code to free nppost and its data structure 
     - in main(), added SOAP_free_codex_copy() for OUTPOSTMODULE 
   * in src/post.c 
     - in read_post(), added code to free np_post and its data structure 
     - in read_post_actions(), added code to free the data structure of np_post 
   * in src/control.c 
     - in *replace_cites, strcpy(newstr,strrep(newstr,orig,repl)) separated into two to avoid buffer overlapping
     - in read_control(), calls SOAP_free_codex() if POSTMODULE is TRUE
   * in USAGE
     - improved instructions for CPU PROFILING
 

2019 FEB 25a
   * in cycle/resconv/_MUSCL/resconv.c
     - in find_musclvars_offset_local(), make code clearer but didn't change functionality


2019 FEB 23a
   * in lib/gridg/2Dbase.c and lib/gridg/3Dbase.c
     - at end of Equation_argum(), added call to SOAP_free_codex_copy() and free(argequation2D.expr)
       to prevent memory leak
   * in lib/soap/soap.c
     - added SOAP_free_codex_copy()
     - in SOAP_process_code(), codex->action_being_processed is now realloced instead of malloced
       to prevent memory leak